Made role card an inner modal with behavior identical to main menu, updated role icon.

--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -105,7 +105,9 @@
 
 	// Role Card
 	body #role-card {
-		@include gradient-vertical(#18b898, $white, 30%, 30%);
+	  .inner {
+	  	@include gradient-vertical(#18b898, $white, 20%, 20%);
+	  }
 
 		.role-info {
 			margin: 0px;
