Another homepage fix.

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -105,18 +105,18 @@
 		<div class="text-block design-dev-team">
 			<h3>Design and Development Team</h3>
 				<div class="people">
-					<div class="team pi"><h5 class="team-title">Principal Investigator </h5>{{content.principalInvestigator.name}}</div>
+					<div class="team pi"><h5 class="team-title">Principal Investigator </h5>{{content.principalInvestigator}}</div>
 					<div class="team-col col-md-6" style="padding:0px">
-						<div class="team"><h5 class="team-title">Product Manager </h5>{{content.productManager.name}}</div>
-						<div class="team"><h5 class="team-title">Lead Developer </h5>{{content.leadDeveloper.name}}</div>
-						<div class="team"><h5 class="team-title">Game Designer </h5>{{content.otherGameDesigner.name}}</div>
-						<div class="team"><h5 class="team-title">Game Designer </h5>{{content.gameDesigner.name}}</div>
+						<div class="team"><h5 class="team-title">Product Manager </h5>{{content.productManager}}</div>
+						<div class="team"><h5 class="team-title">Lead Developer </h5>{{content.leadDeveloper}}</div>
+						<div class="team"><h5 class="team-title">Game Designer </h5>{{content.otherGameDesigner}}</div>
+						<div class="team"><h5 class="team-title">Game Designer </h5>{{content.gameDesigner}}</div>
 					</div>
 					<div class="team-col col-md-6" style="padding:0px">
-						<div class="team"><h5 class="team-title">Project Manager </h5>{{content.projectManager.name}}</div>
-						<div class="team"><h5 class="team-title">Art Director </h5>{{content.artDirector.name}}</div>
-						<div class="team"><h5 class="team-title">Junior Developer </h5>{{content.juniorDeveloper.name}}</div>
-						<div class="team"><h5 class="team-title">Junior Developer </h5>{{content.otherProductionAssistant.name}}</div>
+						<div class="team"><h5 class="team-title">Project Manager </h5>{{content.projectManager}}</div>
+						<div class="team"><h5 class="team-title">Art Director </h5>{{content.artDirector}}</div>
+						<div class="team"><h5 class="team-title">Junior Developer </h5>{{content.juniorDeveloper}}</div>
+						<div class="team"><h5 class="team-title">Junior Developer </h5>{{content.otherProductionAssistant}}</div>
 					</div>
 				</div>
 		</div>
