--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -7,6 +7,12 @@
 
   {{!-- NAME ENTRY --}}
   <div class="lobby" id="name" class="col-sm-12">
+    
+    <div class="mobile col-xs-12 col-centered">
+      <a class="buttonLink ios" href="https://itunes.apple.com/us/app/atstake/id1115782392"><div class="play-button mobile">{{{cloudinaryUrl 'v1494263828/at-stake/layout/app_store.svg' width=135 height=40}}}</div></a>
+      <a class="buttonLink android" href="https://play.google.com/store/apps/details?id=emersonengagementlab.edu.atstake"><div class="play-button mobile">{{{cloudinaryUrl 'v1494265155/at-stake/layout/google-play.png' width=135 height=52}}}</div></a>
+    </div>
+
     <div class="form col-xs-12 col-centered">
 
       <input autocomplete="off" autofill='off' autocorrect="off" autocapitalize="off" spellcheck="false" type="text" id="player-name" maxlength="10" placeholder="Type your name and hit next to begin" class="hidden-el"> <br />
