--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,7 +1,7 @@
 {{!--
 /**
 * ==============
-* atStake Website Landing Page
+* @Stake Website Landing Page
 * Developed by Engagement Lab, 2017
 * Author: Matt Benson
 * ==========
@@ -14,7 +14,9 @@
 			<div class="top-header col-centered">
 				<div class="landing-header"><span>what's</span></br><span>@</span><span>stake?</span></div>
 			</div>
-			<a class="buttonLink" href="/play"><div class="play-button">Play the game!</div></a>
+			<a class="buttonLink desktop" href="/play"><div class="play-button desktop">Play the game!</div></a>
+			<a class="buttonLink ios" href="https://itunes.apple.com/us/app/atstake/id1115782392"><div class="play-button mobile">{{{cloudinaryUrl 'v1494263828/at-stake/layout/app_store.svg' width=135 height=40}}}</div></a>
+			<a class="buttonLink android" href="https://play.google.com/store/apps/details?id=emersonengagementlab.edu.atstake"><div class="play-button mobile">{{{cloudinaryUrl 'v1494265155/at-stake/layout/google-play.png' width=135 height=52}}}</div></a>
 		</div>
 		<img class="landing-image" src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1487958967/at-stake-site/stakewhitecropped.png">
 	</div>
