Added more help text for ‘screen too small’ error modal.

--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -35,6 +35,10 @@ html, body {
 .error-modal {
 	background-color: rgba(254, 120, 70, 0.9);
 	color: white;
+
+	h3 {
+		font-size: 18px;
+	}
 }
 
 // remove default button and input states
