--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -69,6 +69,7 @@
                     <div id="text" class="col-sm-10 col-xs-12 col-centered">
                       <h1>Sorry!</h1>
                       <h2>Your screen size is too small to play.</h2>
+                      <h3>If you are on mobile, download the @Stake App in the App Store or Google Play. You can also try resizing your browser window, use the browser zoom function to make your window smaller, or changing your computer resolution to make your window bigger. If none of these options work, we might not support your device. Please email us at info@elab.emerson.edu for more information or assistance!</h3>
                     </div>
                 </section>
 
