Fixed issue of game logo being blurry. Fixed issue where double-down phase would move to next phase before all players had passed on buying time, and dialog would not cycle if a player did buy time.

--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -1,7 +1,7 @@
 <section id="lobby">
 
   <div id="login-header">
-    {{{cloudinaryUrl "v1490382407/at-stake/layout/logo.svg"}}} 
+    <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1490382407/at-stake/layout/logo.svg" />
     <p>Deliberate, Negotiate, Decide</p>
   </div>
 
