--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -123,7 +123,7 @@
 				{{!-- Decider is choosing --}}
 				<div class="inner-modal player">
 					<div class="inner">
-						<h1>The decider is reviewing {{../username}} agenda item:</h1>
+						<h1>The decider is reviewing an agenda item:</h1>
 						<h2>{{this}}</h2>
 
 						{{#each ../../players}}
