--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -9,7 +9,7 @@
   <div class="lobby" id="name" class="col-sm-12">
     
     <div class="mobile col-xs-12 col-centered">
-      <a class="buttonLink ios" href="https://itunes.apple.com/us/app/atstake/id1115782392"><div class="play-button mobile">{{{cloudinaryUrl 'v1494263828/at-stake/layout/app_store.svg' width=135 height=40}}}</div></a>
+      <a class="buttonLink ios" href="https://itunes.apple.com/us/app/atstake/id1115782392"><div class="play-button mobile">{{{cloudinaryUrl 'v1494263828/at-stake/layout/app_store.svg' width=270 height=80}}}</div></a>
       <a class="buttonLink android" href="https://play.google.com/store/apps/details?id=emersonengagementlab.edu.atstake"><div class="play-button mobile">{{{cloudinaryUrl 'v1494265155/at-stake/layout/google-play.png' width=135 height=52}}}</div></a>
     </div>
 
@@ -24,7 +24,7 @@
       <section id="description">
         <p>@Stake is a fast paced role-playing game promoting empathy and creativity among diverse perspectives.</p>
       </section>
-      <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1490382407/at-stake/e-l-logo_3x.png" height='auto' width='200px'> 
+      <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1490382407/at-stake/layout/e-l-logo.svg" height='auto' width='226px' style="margin: 16px"> 
     </div>
   </div>
 
