--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -46,6 +46,7 @@
 		&:not(#decider) {
 			width: 100%;
 		  height: 70%;
+		  position: relative;
 		  bottom: 0px;
 
 		  &.player-grid {
@@ -362,7 +363,7 @@
 		}
 
 		#access_code {
-			height: 60px;
+			height: 48px;
 			width: 95%;
 			margin: 0 auto;
 			font-size: 12px;
