Removed ordinal position from scoreboard until re-ranking.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -1088,6 +1088,10 @@ blockquote.speech {
 
     flex-direction: column;
 
+    .rank.starting {
+    	visibility: hidden;
+    }
+
 	}
 		
 	.player-logo {
