--- a/templates/partials/script/decider_logic.hbs
+++ b/templates/partials/script/decider_logic.hbs
@@ -50,7 +50,7 @@
       if($(window).outerHeight() < 600)
           $('#error-size').trigger('show');
       else
-          $('#error-size').trigger('hide');
+          $('#error-size').hide();
 
 
   }
