--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -20,6 +20,7 @@ $blue-dark: #0098d0;
 $blue-light: #56d5ff;
 $tiffany-blue: #61f5de;
 $dark-sky-blue: #20b5e6;
+$color-teal: #039b8a;
 
 // Red
 $color-red: #ff4700;
