--- a/templates/partials/shared/meet.hbs
+++ b/templates/partials/shared/meet.hbs
@@ -7,31 +7,28 @@
 	{{/if}}
 
 	{{!-- ROLE CARDS --}}
-	<div class="screen {{#ifeq round 1}}skip{{else}}initial{{/ifeq}}">
+	<div class="screen {{#unless tutorial}}{{#ifeq round 1}}initial{{/ifeq}}{{/unless}}">
 
-		{{> component/instructions 
-				decider=true
-				heading="Read the text in the blue box aloud"
-				body="Once you finish speaking the instructions to other players, press next to continue."
-		}}
+		{{#ifnoteq round 1}}
+			<div id="new-decider" class="inner-modal" data-duration="6">
+				<div class="inner decide-winner">
+					<h1 id="round">Round {{round}}</h1>
+					<h2><span>{{decider}}</span> is the new decider this round, and everyone else has been assigned new roles. Let's get started!</h2>
 
-		{{> component/instructions 
-				heading="Skip"
-				body="Skip"
-		}}
+					{{#each players}}
+				    <div id="player-{{icon}}" class="player-box player-logo" style="cursor:default;">
+					    <div class="coins">{{coins}}</div>
+						  <div class="info">
+							  <h1>{{username}}</h1>
+						    <h2>{{title}}</h2>
+					    </div>
+					  </div>
+					{{/each}}
+			  </div>
+			</div>
 
-		{{> component/speech 
-				decider=true
-				body="I'm the brand new decider!"
-		}}
-
-		{{> component/speech 
-				body="There's a new decider."
-		}}
-
-	</div>
-
-	<div class="screen {{#unless tutorial}}{{#ifeq round 1r}}initial{{/ifeq}}{{/unless}}">
+		  <span id="modifier" class="hidden-el" data-inner_modal="true"></span>
+		{{/ifnoteq}}
 
 		{{> component/instructions 
 				decider=true
